--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy": "http://localhost:8080/",
+  "proxy": "http://localhost:8080/api/v1",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
