--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.4.7",
     "axios": "^1.4.0",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
     "quill": "^1.3.7",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.1",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
