--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "google-auth-library": "^8.8.0",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "socket.io": "^4.6.1",
