--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./src/index.js",
-    "dbbuild": "node ./src/database/config/build.mjs",
-    "open": ""
+    "build": "npm run build",
+    "dbbuild": "cross-env NODE_ENV=development node ./src/database/config/build.mjs",
+    "build:db:production": "cross-env NODE_ENV=production node ./src/database/config/build.mjs"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
