--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy": "http://localhost:8080/",
+  "proxy": "http://localhost:8080/api/v1",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
